added logo and tried to figure out hero image. Need help.

--- a/home.html
+++ b/home.html
@@ -12,10 +12,16 @@
     <script src="https://kit.fontawesome.com/fd503845fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1> Home Page </h1>
+    <div class="hero-image">
+    </div>
+    <div class="hero-text"></div>
+    <h1> I am Carlos Padilla </h1>
+    <p> And I am a brand new developer </p>
+    <p> Fresno, CA</p>
+    <a href="#" class="hero-btn"> Choose Me!</a>
     <i class="fa-brands fa-facebook"></i>
     <header>
-        <img class="logo" src="./img/logo.png" alt="logo">
+        <img class="logo" src="./img/Unbreakable.png" alt="logo">
         <nav>
             <ul>
                 <a class="nav-links" href="home.html"><li>Home</li></a>
