--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project Page 1</title>
+    <title>Final Project Page 3</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <h1> Contact Page </h1>
     <i class="fa-brands fa-facebook"></i>
     <header>
-        <img class="logo" src="./img/logo.png" alt="logo">
+        <img class="logo" src="./img/Unbreakable.png" alt="logo">
         <nav>
             <ul>
                 <a class="nav-links" href="home.html"><li>Home</li></a>
