Learned to put audio and video and embed youtube videos. Needs to eventually be cleaned :)

--- a/about.html
+++ b/about.html
@@ -12,8 +12,12 @@
     <script src="https://kit.fontawesome.com/fd503845fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>About Page </h1>
-    <i class="fa-brands fa-facebook"></i>
+    <div class="hero-image">
+    </div>
+    <h1> About Page </h1>
+    <a href="https://facebook.com" target="blank">
+        <i class="fa-brands fa-facebook"></i>
+    </a>
     <header>
         <img class="logo" src="./img/Unbreakable.png" alt="logo">
         <nav>
