--- a/home.html
+++ b/home.html
@@ -18,17 +18,31 @@
     <h1> I am Carlos Padilla </h1>
     <p> And I am a brand new developer </p>
     <p> Fresno, CA</p>
-    <a href="#" class="hero-btn"> Choose Me!</a>
-    <i class="fa-brands fa-facebook"></i>
+    <p> Choose Me! ^_^</p>
+    <!-- <a href="#" class="hero-btn"> Choose Me!</a> -->
+    <div class="socials-container">
+        <a href="https://facebook.com" target="blank">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+    </div>
     <header>
         <img class="logo" src="./img/Unbreakable.png" alt="logo">
+        <!-- <video controls>
+            <source src="./img/butterfly.mp4">
+        </video> -->
+            <audio autoplay controls>
+                <source src="./audio/bensound-anewbeginning.mp3">
+            </audio>
+
         <nav>
             <ul>
                 <a class="nav-links" href="home.html"><li>Home</li></a>
                 <a class="nav-links" href="about.html"><li>About</li></a>
                 <a class="nav-links" href="contact.html"><li>Contact</li></a>
             </ul>
-        </nav>       
+        </nav>     
+        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XYlDj7dcegg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </header>    
 </body>
 </html>
