--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,12 @@
     <script src="https://kit.fontawesome.com/fd503845fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="hero-image">
+    </div>
     <h1> Contact Page </h1>
-    <i class="fa-brands fa-facebook"></i>
+    <a href="https://facebook.com" target="blank">
+        <i class="fa-brands fa-facebook"></i>
+    </a>
     <header>
         <img class="logo" src="./img/Unbreakable.png" alt="logo">
         <nav>
