Did the footer with Brizaans. Super fun.

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <a id="top"></a>
         <div class="hero-image">
 
             <div class="navbar">
@@ -38,10 +39,6 @@
         </div>
     </header>
 
-    <div class="socials-container">
-        <a href="https://facebook.com" target="blank">
-            <i class="fa-brands fa-facebook"></i>
-        </a>
     </div>
     <div>
         <!-- <video controls>
@@ -58,11 +55,18 @@
             <p class="intro-text">Hello World! My name is Carlos Padilla and I'd like to show you the path that led me to go from feeling stuck and living an unfulfilling life to making an effort every single day to build my future. In my first website ever made, I'd like to show you three videos that helped change my mindset from stuck to snuck out of there! If you want to change your life, you're in the right place. Let's go!!!</p>
         </div>
         <div class="vid">
-             <iframe width="633.5" height="515" src="https://www.youtube.com/embed/XYlDj7dcegg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             <iframe src="https://www.youtube.com/embed/XYlDj7dcegg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
-    <footer>
+    <footer class="socials-container">
         
+            <p>Check meowt!<i class="fa-solid fa-cat"></i></p>
+            <a href="https://www.facebook.com/profile.php?id=100008257841191" target="blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i></a>
+
+            <a href="#top" style="color:#ffbdde;">Return to Top</a>
     </footer>
    
 </body>
