Created second page with three videos and explanation of why I chose those videos.

--- a/home.html
+++ b/home.html
@@ -32,9 +32,9 @@
 
             <div class="hero-text">
                 <h1 class="hero-text-heading"> Carlos Padilla </h1>
-                <p> I am a brand new developer </p>
+                <p> I am a brand new developer learning with Bitwise Industries</p>
                 <p> Fresno, CA</p>
-                <p> Choose Me! ^_^</p>
+                <p> Please pick me for an apprenticeship! :D</p>
             </div>
         </div>
     </header>
@@ -52,7 +52,7 @@
     </div>
     <div class="introduction">
         <div class="text">
-            <p class="intro-text">Hello World! My name is Carlos Padilla and I'd like to show you the path that led me to go from feeling stuck and living an unfulfilling life to making an effort every single day to build my future. In my first website ever made, I'd like to show you three videos that helped change my mindset from stuck to snuck out of there! If you want to change your life, you're in the right place. Let's go!!!</p>
+            <p class="intro-text">Hello World! My name is Carlos Padilla and I'd like to show you the path that led me to go from feeling stuck and living an unfulfilling life to making an effort every single day to build my future. In my first website ever made, I'd like to show you three videos that helped change my mindset from stuck to snuck out of there! If you want to change your life, you're in the right place! Let's go!!!</p>
         </div>
         <div class="vid">
              <iframe src="https://www.youtube.com/embed/XYlDj7dcegg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -66,7 +66,7 @@
             </a>
             <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i></a>
 
-            <a href="#top" style="color:#ffbdde;">Return to Top</a>
+            <a href="#top" >Return to Top</a>
     </footer>
    
 </body>
