Made new video and changed text.

--- a/about.html
+++ b/about.html
@@ -31,10 +31,8 @@
         
 
             <div class="hero-text">
-                <h1 class="hero-text-heading"> Carlos Padilla </h1>
-                <p> I am a brand new developer learning with Bitwise Industries</p>
-                <p> Fresno, CA</p>
-                <p> Please pick me for an apprenticeship! :D</p>
+                <h1 class="hero-text-heading"> Time To Learn! </h1>
+                <p>If you're ready to find out why you think you have no motivation then keep going!</p>
             </div>
         </div>
     </header>
@@ -77,7 +75,7 @@
             6 Ways To Build Good Habits helped me to understand how the smallest habits could change my life drastically over time as long as I put in the effort to keep them up.
         </p>
         <p>
-            7 Habits of A Self Destructive Person helped me to understand the things I was constantly doing to hold myself back from progressing. Some of these came as a shock to me.
+            7 Habits of A Self Destructive Person helped me to understand the things I was constantly doing to hold myself back from progressing. Some of these came as a shock to me. Set your personal boundaries with these.
         </p>
     </div>
 
