--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
             <p class="intro-text">Hello World! My name is Carlos Padilla and I'd like to show you the path that led me to go from feeling stuck and living an unfulfilling life to making an effort every single day to build my future. In my first website ever made, I'd like to show you three videos that helped change my mindset from stuck to snuck out of there! If you want to change your life, you're in the right place! Let's go!!!</p>
         </div>
         <div class="vid">
-             <iframe src="https://www.youtube.com/embed/XYlDj7dcegg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4KVa5BhdwuI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     <footer class="socials-container">
