Worked on contact.html. Added images and google map embed

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a id="top"></a>
-        <div class="hero-image">
+        <div class="hero-image-contact">
 
             <div class="navbar">
 
@@ -38,15 +38,68 @@
     </header>
 
     </div>
+
+    <div class="picture-row-1">
+        <img src="./img/10.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/11.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/12.jpg" alt="" class="pictures-row-portrait">
+    </div>
+
+    <div class="picture-row-1">
+        <img src="./img/1.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/2.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/3.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/4.jpg" alt="" class="pictures-row-portrait">
+    </div>
+
+    <div class="picture-row-1">
+        <img src="./img/5.jpg" alt="" class="pictures-row-landscape">
+        <img src="./img/6.jpg" alt="" class="pictures-row-landscape">
+    </div>
+
+    <div class="picture-row-1">
+        <img src="./img/7.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/8.jpg" alt="" class="pictures-row-portrait">
+        <img src="./img/9.jpg" alt="" class="pictures-row-portrait">
+    </div>
+
+    <div class="picture-row-1">
+        <img src="./img/13.jpg" alt="" class="pictures-row-landscape">
+       <a href="trap.html"><img src="./img/itscarlos.JPG" alt="" class="pictures-row-portrait"></a>
+    </div>
+    
     <div>
+
         <!-- <video controls>
             <source src="./img/butterfly.mp4">
         </video> -->
 
-            <audio autoplay controls>
+            <!-- <audio autoplay controls>
                 <source src="./audio/bensound-memories.mp3">
-            </audio>  
+            </audio>   -->
         
+    </div>
+
+    <div class="contact-map-div">
+
+        <div class = "google-map-div">
+
+            <h1 class = "google-map-title">Come on by!</h1>
+
+            <iframe class = "google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3797.6067385583337!2d-119.87839366819387!3d36.83304149378851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809468c908e17aeb%3A0x68b13f0a65e441b9!2sNorthPointe%20Community%20Church!5e0!3m2!1sen!2sus!4v1645130209108!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+        </div>
+
+        <div class="form">
+            <form action="">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Submit">
+        </form>
+        </div>
+
     </div>
 
 
@@ -59,6 +112,7 @@
             <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i></a>
 
             <a href="#top" >Return to Top</a>
+
     </footer>
    
 </body>
