Added trap page and youtube link.

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
 
     </div>
 
+    <audio class="audiobar" autoplay controls>
+        <source src="./audio/bensound-memories.mp3">
+    </audio>  
+
     <div class="picture-row-1">
         <img src="./img/10.jpg" alt="" class="pictures-row-portrait">
         <img src="./img/11.jpg" alt="" class="pictures-row-portrait">
@@ -73,10 +77,6 @@
         <!-- <video controls>
             <source src="./img/butterfly.mp4">
         </video> -->
-
-            <!-- <audio autoplay controls>
-                <source src="./audio/bensound-memories.mp3">
-            </audio>   -->
         
     </div>
 
@@ -109,8 +109,11 @@
             <a href="https://www.facebook.com/profile.php?id=100008257841191" target="blank">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i></a>
-
+            <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UCNQapoVBvuzd1U9fK8EErIw" target="blank">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
             <a href="#top" >Return to Top</a>
 
     </footer>
