--- a/home.html
+++ b/home.html
@@ -65,6 +65,8 @@
                 <i class="fa-brands fa-facebook"></i>
             </a>
             <a href="https://github.com/Luvbun" target="blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/channel/UCNQapoVBvuzd1U9fK8EErIw" target="blank">
+                <i class="fa-brands fa-youtube"></i></a>
 
             <a href="#top" >Return to Top</a>
     </footer>
