Changed name to index.html from home.html.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
                 <nav>
                     <ul>
-                        <a class="nav-links" href="home.html"><li>Home</li></a>
+                        <a class="nav-links" href="index.html"><li>Home</li></a>
                         <a class="nav-links" href="about.html"><li>About</li></a>
                         <a class="nav-links" href="contact.html"><li>Contact</li></a>
                     </ul>
