Fixed dance page a lil bit.

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
 
         <div class = "google-map-div">
 
-            <h1 class = "google-map-title">Come on by!</h1>
+            <h1 class = "google-map-title">Come join my family at Church! ^_^</h1>
 
             <iframe class = "google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3797.6067385583337!2d-119.87839366819387!3d36.83304149378851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809468c908e17aeb%3A0x68b13f0a65e441b9!2sNorthPointe%20Community%20Church!5e0!3m2!1sen!2sus!4v1645130209108!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
