--- a/trap.html
+++ b/trap.html
@@ -12,8 +12,21 @@
     <script src="https://kit.fontawesome.com/fd503845fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="trap">
-        <p class="traptext">Now Watch Me Dance!</p>
+    <div class="navbar">
+
+        <img class="logo" src="./img/Unbreakable.png" alt="logo">
+
+        <nav>
+            <ul>
+                <a class="nav-links" href="index.html"><li>Home</li></a>
+                <a class="nav-links" href="about.html"><li>About</li></a>
+                <a class="nav-links" href="contact.html"><li>Contact</li></a>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="dance">
+        <p class="dance-text">Now Watch Me Dance!</p>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/iyuQIHUK1ws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
